// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User resolver getUser 1`] = `
Object {
  "companyId": "5e5df7fc6953acd3dc50fe8f",
  "id": "5e5df7f450571fb3aecdcf21",
  "name": "Bob Markle",
  "role": "user",
  "username": "bob",
}
`;

exports[`User resolver getUsers 1`] = `
Array [
  Object {
    "companyId": "5e5df7fc6953acd3dc50fe8f",
    "id": "5e5df7f450571fb3aecdcf21",
    "name": "Bob Markle",
    "role": "user",
    "username": "bob",
  },
  Object {
    "companyId": "5e5df7fc6953acd3dc50fe8f",
    "id": "5e5df7f450571fb3aecdcf22",
    "name": "Mark Smith",
    "role": "admin",
    "username": "mark",
  },
]
`;
